--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "Week 2 Assignment: Analysis of Activity from a Personal Activity Monitoring Device"
-output: html_document
+output: 
+  html_document: 
+    keep_md: yes
 ---
 
 ## Loading the packages
